api/deploy/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dbc-api
  labels:
    app: dbc-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dbc-api
  template:
    metadata:
      labels:
        app: dbc-api
    spec:
      containers:
        - name: 'dbc-api'
          image: 'gleidsonfersanp/dbc-api:v12'
          imagePullPolicy: IfNotPresent
          args: ["export spring_profiles_active=prod"]
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 40
            timeoutSeconds: 2
            periodSeconds: 3
            failureThreshold: 2
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 100
            timeoutSeconds: 2
            periodSeconds: 8
            failureThreshold: 1
