api/deploy/service.yml
apiVersion: v1
kind: Service
metadata:
  name: dbc-ap1
spec:
  type: ClusterIP
  selector:
    app: dbc-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
